working on adding oauthbearer